--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/index.html
@@ -6,7 +6,7 @@
 <body>
 <p>Hotels Maintenance Database</p>
 <a href="{% url 'HotelsAppCRUD:hotel_create' %}"> Hotels Create</a>
-<a href="{% url 'HotelsAppCRUD:hotel_list' %}"> Hotels List</a>
+<a href="{% url 'HotelsAppCRUD:hotel_detail' %}"> Hotels Detail</a>
 <a href="{% url 'HotelsAppCRUD:hotel_update' %}"> Hotels Update</a>
 <a href="{% url 'HotelsAppCRUD:hotel_delete' %}"> Hotels Delete</a>
 </body>
