--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hotel Create</title>
+    <title>Room Reservation Detail</title>
 </head>
 <body>
 <form action="" method="POST">
 {% csrf_token %}
-{{ form.as_table }}
+{{ form }}
 <button type="submit">SUBMIT</button>
 </form>
 </body>
