--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/index.html
@@ -6,9 +6,7 @@
 <body>
 <p>Customer Maintenance Database</p>
 <a href="{% url 'HotelsAppCRUD:customer_create' %}"> Customers Create</a>
-<a href="{% url 'HotelsAppCRUD:customer_detail' %}"> Customers Detail</a>
-<a href="{% url 'HotelsAppCRUD:customer_update' %}"> Customers Update</a>
-<a href="{% url 'HotelsAppCRUD:customer_delete' %}"> Customers Delete</a>
+<a href="{% url 'HotelsAppCRUD:customer_list' %}"> Customer List</a>
 </body>
 </head>
 </html>
