--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/index.html
@@ -6,7 +6,7 @@
 <body>
 <p>Rooms Maintenance Database</p>
 <a href="{% url 'HotelsAppCRUD:room_create' %}"> Rooms Create</a>
-<a href="{% url 'HotelsAppCRUD:room_list' %}"> Rooms List</a>
+<a href="{% url 'HotelsAppCRUD:room_detail' %}"> Rooms List</a>
 <a href="{% url 'HotelsAppCRUD:room_update' %}"> Rooms Update</a>
 <a href="{% url 'HotelsAppCRUD:room_delete' %}"> Rooms Delete</a>
 </body>
