--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hotel Update</title>
+    <title>Hotel Detail</title>
 </head>
 <body>
-<form action="" method="POST">
-{% csrf_token %}
-{{ form }}
-<button type="submit">SUBMIT</button>
-</form>
+
+{% block content %}
+  <h1>Hotel: {{ hotel.name }}</h1>
+  <p><strong>Description:</strong> {{ hotel.description }}</a></p>
+  <p><strong>Star Rating:</strong> {{ hotel.star_rating }}</p>
+  <p><strong>Address:</strong> {{ hotel.address }}</p>
+  <p><strong>Latitude:</strong> {{ hotel.latitude }}</p>
+  <p><strong>Longitude:</strong> {{ hotel.longitude }}</p>
+{% endblock %}
 </body>
 </html>
