--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Hotels Application</title>
-<body>
-<p>Customer Maintenance Database</p>
-<a href="{% url 'HotelsAppCRUD:customer_create' %}"> Customers Create</a>
-<a href="{% url 'HotelsAppCRUD:customer_list' %}"> Customer List</a>
-</body>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col1">Choose option</th>
+      <th scope="col2"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Customer Menu</th>
+      <td> <a href="{% url 'HotelsAppCRUD:customer_create' %}"> Customer Create</a> </td>
+    </tr>
+    <tr>
+      <th scope="row">Customer Menu</th>
+      <td> <a href="{% url 'HotelsAppCRUD:customer_list' %}"> Customer List</a> </td>
+    </tr>
+  </tbody>
+</table>
 </head>
 </html>
