--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_list.html
@@ -6,19 +6,30 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Hotels Application</title>
 <body>
-<p>Rooms Reservation Maintenance Database</p>
+<p>Room Reservation Maintenance Database</p>
 {% block content %}
   <h1>Reservation List</h1>
   {% if reservation_list %}
-  <ul>
-    {% for reservation in reservation_list %}
-      <li>
-        <a href="{{ reservation.get_absolute_url }}">{{ reservation.reservation_id}}</a> ({{reservation.room_number}})
-      </li>
-    {% endfor %}
-  </ul>
+   <table class="table table-hover">
+      <thead>
+         <tr>
+           <th scope="col1">Choose option</th>
+           <th scope="col2"></th>
+        </tr>
+      </thead>
+      <tbody>
+       {% for reservation in reservation_list %}
+        <tr>
+           <th scope="row">{{ hotel.name}}</th>
+               <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_detail' pk=reservation.reservation_id %}" class="btn btn-info" role="button">Detail</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_update' pk=reservation.reservation_id %}" class="btn btn-info" role="button">Update</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_delete' pk=reservation.reservation_id %}" class="btn btn-info" role="button">Delete</a> </td>
+        </tr>
+       {% endfor %}
+      </tbody>
+   </table>
   {% else %}
-    <p>There are no Hotels in the database.</p>
+     <p>There are no Reservation in the database.</p>
   {% endif %}
 {% endblock %}
 </body>
