--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
@@ -6,10 +6,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Hotels Application</title>
 <body>
-<p>Hotels Maintenance Database</p>
+<p>Room Maintenance Database</p>
 {% block content %}
-  <h1>Hotel List</h1>
-  {% if hotel_list %}
+  <h1>Room List</h1>
+  {% if room_list %}
    <table class="table table-hover">
       <thead>
          <tr>
@@ -18,18 +18,18 @@
         </tr>
       </thead>
       <tbody>
-       {% for hotel in hotel_list %}
+       {% for room in room_list %}
         <tr>
-           <th scope="row">{{ hotel.name}}</th>
-               <td> <a href="{% url 'HotelsAppCRUD:hotel_detail' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Detail</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:hotel_update' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:hotel_delete' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Delete</a> </td>
+           <th scope="row">{{ room.number}}</th>
+               <td> <a href="{% url 'HotelsAppCRUD:room_detail' pk=room.room_id %}" class="btn btn-info" role="button">Detail</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_update' pk=room.room_id %}" class="btn btn-info" role="button">Update</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_delete' pk=room.room_id %}" class="btn btn-info" role="button">Delete</a> </td>
         </tr>
        {% endfor %}
       </tbody>
    </table>
   {% else %}
-     <p>There are no Hotels in the database.</p>
+     <p>There are no Room in the database.</p>
   {% endif %}
 {% endblock %}
 </body>
