--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Hotels Application</title>
 <body>
-<p>Rooms Service Maintenance Database</p>
-<a href="{% url 'HotelsAppCRUD:rooms_service_create' %}"> Rooms Service Create</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_detail' %}"> Rooms Service List</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_update' %}"> Rooms Service Update</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_update' %}"> Rooms Service Delete</a></body>
+<p>Rooms Maintenance Database</p>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col1">Choose option</th>
+      <th scope="col2"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Room Service Menu</th>
+      <td> <a href="{% url 'HotelsAppCRUD:room_service_create' %}"> Room Service Create</a> </td>
+    </tr>
+    <tr>
+      <th scope="row">Room Service Menu</th>
+      <td> <a href="{% url 'HotelsAppCRUD:room_service_list' %}"> Room Service List</a> </td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </head>
 </html>
