--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
@@ -6,11 +6,33 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Hotels Application</title>
 <body>
-<p>Rooms Service Maintenance Database</p>
-<a href="{% url 'HotelsAppCRUD:rooms_service_create' %}"> Rooms Service Create</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_detail' %}"> Rooms Service List</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_update' %}"> Rooms Service Update</a>
-<a href="{% url 'HotelsAppCRUD:rooms_service_update' %}"> Rooms Service Delete</a></body>
+<p>Room Service Maintenance Database</p>
+{% block content %}
+  <h1>Room Service List</h1>
+  {% if service_list %}
+   <table class="table table-hover">
+      <thead>
+         <tr>
+           <th scope="col1">Choose option</th>
+           <th scope="col2"></th>
+        </tr>
+      </thead>
+      <tbody>
+       {% for service in service_list %}
+        <tr>
+           <th scope="row">{{ hotel.name}}</th>
+               <td> <a href="{% url 'HotelsAppCRUD:room_service_detail' pk=service.service_id %}" class="btn btn-info" role="button">Detail</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_service_update' pk=service.service_id %}" class="btn btn-info" role="button">Update</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_service_delete' pk=service.service_id %}" class="btn btn-info" role="button">Delete</a> </td>
+        </tr>
+       {% endfor %}
+      </tbody>
+   </table>
+  {% else %}
+     <p>There are no Room Service in the database.</p>
+  {% endif %}
+{% endblock %}
 </body>
+
 </head>
 </html>
