Ninth Release Corrected many problems in different places
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/index.html
@@ -19,11 +19,11 @@
   <tbody>
     <tr>
       <th scope="row">Room Service Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:room_service_create' %}"> Room Service Create</a> </td>
+      <td> <a href="{% url 'HotelsAppCRUD:rooms_service_create' %}"> Room Service Create</a> </td>
     </tr>
     <tr>
       <th scope="row">Room Service Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:room_service_list' %}"> Room Service List</a> </td>
+      <td> <a href="{% url 'HotelsAppCRUD:rooms_service_list' %}"> Room Service List</a> </td>
     </tr>
   </tbody>
 </table>
