Thirteenth release is good all Database changes are working correctly
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_create.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_create.html
@@ -7,10 +7,13 @@
     <title>Room Service Create</title>
 </head>
 <body>
+{% load crispy_forms_tags %}
+{% block content %}
 <form action="" method="POST">
 {% csrf_token %}
-{{ form }}
+{{ form|crispy }}
 <button type="submit">SUBMIT</button>
 </form>
+{% endblock %}
 </body>
 </html>
