--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
@@ -7,10 +7,9 @@
     <title>Hotel Detail</title>
 </head>
 <body>
-
 {% block content %}
   <h1>Hotel: {{ hotel.name }}</h1>
-  <p><strong>Description:</strong> {{ hotel.description }}</a></p>
+  <p><strong>Description:</strong> {{ hotel.description }}</p>
   <p><strong>Star Rating:</strong> {{ hotel.star_rating }}</p>
   <p><strong>Address:</strong> {{ hotel.address }}</p>
   <p><strong>Latitude:</strong> {{ hotel.latitude }}</p>
