--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
@@ -7,10 +7,15 @@
     <title>Room Reservation Detail</title>
 </head>
 <body>
-<form action="" method="POST">
-{% csrf_token %}
-{{ form }}
-<button type="submit">SUBMIT</button>
-</form>
+% block content %}
+  <h1>Reservation Id: {{ roomreservation.reservation_id }}</h1>
+  <p><strong>Hotel Id:</strong> {{ roomreservation.hotel_id }}</p>
+  <p><strong>Customer Id:</strong> {{ roomreservation.customer_id }}</p>
+  <p><strong>Room Id:</strong> {{ roomreservation.room_id }}</p>
+  <p><strong>Room Number:</strong> {{ roomreservation.room_number }}</p>
+  <p><strong>From Date:</strong> {{ roomreservation.from_date }}</p>
+  <p><strong>To Date:</strong> {{ roomreservation.to_date }}</p>
+  <p><strong>Payment No:</strong> {{ roomreservation.payment_no }}</p>
+{% endblock %}
 </body>
 </html>
