--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_detail.html
@@ -7,10 +7,16 @@
     <title>Room Billing Detail</title>
 </head>
 <body>
-<form action="" method="POST">
-{% csrf_token %}
-{{ form }}
-<button type="submit">SUBMIT</button>
-</form>
+{% block content %}
+  <h1>Room Billing Id: {{ roombilling.reservation_id }}</h1>
+  <p><strong>Customer Id:</strong> {{ roombilling.customer_id }}</p>
+  <p><strong>Room Charge Id:</strong> {{ roombilling.room_charge_id }}</p>
+  <p><strong>Billing Address 1:</strong> {{ roombilling.billing_address1 }}</p>
+  <p><strong>Billing Address 2:</strong> {{ roombilling.billing_address1 }}</p>
+  <p><strong>County:</strong> {{ roombilling.county }}</p>
+  <p><strong>Postal Code:</strong> {{ roombilling.postal_code }}</p>
+  <p><strong>Country:</strong> {{ roombilling.country }}</p>
+  <p><strong>Total Invoice:</strong> {{ roombilling.total_invoice }}</p>
+{% endblock %}
 </body>
 </html>
