--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_detail.html
@@ -7,10 +7,11 @@
     <title>Customer List</title>
 </head>
 <body>
-<form action="" method="POST">
-{% csrf_token %}
-{{ form }}
-<button type="submit">SUBMIT</button>
-</form>
+{% block content %}
+  <h1>Customer Id: {{ customer.customer_id }}</h1>
+  <p><strong>Name:</strong> {{ customer.name }}</p>
+  <p><strong>Credit Card No:</strong> {{ customer.credit_card_no }}</p>
+  <p><strong>Email:</strong> {{ customer.email }}</p>
+{% endblock %}
 </body>
 </html>
