--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
@@ -20,7 +20,7 @@
       <tbody>
        {% for room in room_list %}
         <tr>
-           <th scope="row">{{ room.number}}</th>
+           <th scope="row">{{ room.room_id }}</th>
                <td> <a href="{% url 'HotelsAppCRUD:room_detail' pk=room.room_id %}" class="btn btn-info" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_update' pk=room.room_id %}" class="btn btn-info" role="button">Update</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_delete' pk=room.room_id %}" class="btn btn-info" role="button">Delete</a> </td>
