--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_update.html
@@ -12,7 +12,7 @@
 <form action="" method="POST">
 {% csrf_token %}
 {{ form|crispy }}
-<button type="submit">SUBMIT</button>
+<button type="submit" class="btn btn-success">Save Reservation</button>
 </form>
 {% endblock %}
 </body>
