Seventeenth change added Google Maps API to the application
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -73,20 +73,20 @@
         <section class="contact_area section_gap">
             <div class="container">
                 <div id="mapBox" class="mapBox"
-                    data-lat="40.701083"
-                    data-lon="-74.1522848"
+                    data-lat="53.3482125"
+                    data-lon="-6.3356914"
                     data-zoom="13"
-                    data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                    data-mlat="40.701083"
-                    data-mlon="-74.1522848">
+                    data-info="8 Golden Ln, Dublin, D08 VRR7"
+                    data-mlat="53.3482125"
+                    data-mlon="-6.3356914">
                 </div>
                 <div class="row">
                     <div class="col-md-3">
                         <div class="contact_info">
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
-                                <h6>California, United States</h6>
-                                <p>Santa monica bullevard</p>
+                                <h6>Dublin Ireland</h6>
+                                <p>8 Golden Ln, Dublin, D08 VRR7</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
