Eighteenth change added Google Maps API to the application
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <title>Hotels Application</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        {% load static %}
+        <link rel="icon" href="{% static 'image/favicon.png' %}" type="image/png">
+        <title>Royal Hotel</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+        <link rel="stylesheet" href="{% static 'vendors/linericon/style.css'  %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'  %}">
+        <link rel="stylesheet" href="{% static 'vendors/owl-carousel/owl.carousel.min.css'  %}">
+        <link rel="stylesheet" href="{% static 'vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css'  %}">
+        <link rel="stylesheet" href="{% static 'vendors/nice-select/css/nice-select.css'  %}">
+        <link rel="stylesheet" href="{% static 'vendors/owl-carousel/owl.carousel.min.css'  %}">
+        <!-- main css -->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    <title>Room Service List</title>
+</head>
 <body>
-<p>Room Service Maintenance Database</p>
 {% block content %}
   <h1>Room Service List</h1>
   {% if service_list %}
@@ -33,6 +46,4 @@
   {% endif %}
 {% endblock %}
 </body>
-
-</head>
 </html>
