--- a/templates/contact.html
+++ b/templates/contact.html
@@ -258,7 +258,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="{% static 'vendors/lightbox/simpleLightbox.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
         <!--gmaps Js-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7ilxgpktUWrY4K2Ax-xBmn45MMZvhdFA"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7ilxgpktUWrY4K2Ax-xBmn45MMZvhdFA&libraries=places"></script>
         <script src="{% static 'js/gmaps.min.js' %}"></script>
         <!-- contact js -->
         <script src="{% static 'js/jquery.form.js' %}"></script>
