--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/index.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/index.html
@@ -20,6 +20,20 @@
     <title>Room Billing Index</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Home</a></li>
+                        <li class="active">Room Billing Index</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 <table class="table table-hover">
   <thead>
     <tr>
