--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_detail.html
@@ -20,6 +20,20 @@
     <title>Room Billing Detail</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Home</a></li>
+                        <li class="active">Room Billing Detail</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Room Billing Id: {{ roombilling.reservation_id }}</h1>
   <p><strong>Customer Id:</strong> {{ roombilling.customer_id }}</p>
