--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Billing/room_billing_list.html
@@ -19,7 +19,20 @@
     <title>Room Billing List</title>
 </head>
 <body>
-<p>Room Billing Maintenance Database</p>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Home</a></li>
+                        <li class="active">Room Billing List</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Room Billing List</h1>
   {% if billing_list %}
