--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_list.html
@@ -19,7 +19,20 @@
         <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Room Charge List</title>
 </head>
-<p>Room Charges Maintenance Database</p>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_charge_index' %}">Home</a></li>
+                        <li class="active">Room Charge List</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>Room Charges List</h1>
   {% if charges_list %}
