--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_delete.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_delete.html
@@ -20,7 +20,20 @@
     <title>Room Reservation Delete</title>
 </head>
 <body>
-<p>Confirm Delete</p>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Home</a></li>
+                        <li class="active">Room Reservation Delete</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
  {% block content %}
 <form action="" method="POST">
     {% csrf_token %}
