--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_detail.html
@@ -20,6 +20,21 @@
     <title>Room Service Detail</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsAppCRUD:rooms_service_index' %}">Home</a></li>
+                        <li class="active">Room Service Detail</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
+
 {% block content %}
   <h1>Service Id: {{ roomservice.service_id }}</h1>
   <p><strong>Service Description:</strong> {{ roomservice.service_description }}</p>
