Twentieth change added session cookies setup and database changes defaults
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_detail.html
@@ -38,7 +38,11 @@
   <h1>Hotel: {{ hotel.name }}</h1>
   <p><strong>Description:</strong> {{ hotel.description }}</p>
   <p><strong>Star Rating:</strong> {{ hotel.star_rating }}</p>
-  <p><strong>Address:</strong> {{ hotel.address }}</p>
+  <p><strong>Address 1:</strong> {{ hotel.address1 }}</p>
+  <p><strong>Address 2:</strong> {{ hotel.address2 }}</p>
+  <p><strong>County:</strong> {{ hotel.county }}</p>
+  <p><strong>Postal Code:</strong> {{ hotel.postal_code }}</p>
+  <p><strong>Country:</strong> {{ hotel.country }}</p>
   <p><strong>Latitude:</strong> {{ hotel.latitude }}</p>
   <p><strong>Longitude:</strong> {{ hotel.longitude }}</p>
 {% endblock %}
