--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_create.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Charge/room_charge_create.html
@@ -38,9 +38,30 @@
 {% block content %}
 <form action="" method="POST">
 {% csrf_token %}
-{{ form|crispy }}
-<button type="submit" class="btn btn-success">Save Room Charge</button>
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.reservation_id|as_crispy_field }}
+      </div>
+    <div class="form-group col-md-6 mb-0">
+        {{ form.service_id|as_crispy_field }}
+     </div>
+    </div>
+    <div class="form-row">
+     <div class="form-group col-md-6 mb-0">
+        {{ form.description|as_crispy_field }}
+     </div>
+     <div class="form-group col-md-6 mb-0">
+        {{ form.discount_code|as_crispy_field }}
+     </div>
+	 <div class="form-group col-md-6 mb-0">
+        {{ form.discount_price|as_crispy_field }}
+     </div>
+	</div>
+        <button type="submit" class="btn btn-success">Save Room Charges<span class="lnr lnr-arrow-right"></span></button>
+        <a href="{% url 'HotelsAppCRUD:rooms_charge_index' %}" class="btn btn-info" type="button">Cancel<span class="lnr lnr-arrow-right"></span></a>
+  </form>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
