--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_update.html
@@ -38,9 +38,44 @@
 {% block content %}
 <form action="" method="POST">
 {% csrf_token %}
-{{ form|crispy }}
-<button type="submit" class="btn btn-success">Save Reservation</button>
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-row">
+     <div class="form-group col-md-6 mb-0">
+        {{ form.hotel_id|as_crispy_field }}
+     </div>
+     <div class="form-group col-md-6 mb-0">
+        {{ form.customer_id|as_crispy_field }}
+     </div>
+	 <div class="form-group col-md-6 mb-0">
+        {{ form.room_id|as_crispy_field }}
+     </div>
+	</div>
+	<div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.room_number|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.from_date|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.to_date|as_crispy_field }}
+      </div>
+	</div>
+	<div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.number_of_adults|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.number_of_children|as_crispy_field }}
+      </div>
+	 	  <div class="form-group col-md-6 mb-0">
+        {{ form.payment_no|as_crispy_field }}
+      </div>
+	</div>
+        <button type="submit" class="btn btn-success">Save Room Reservation<span class="lnr lnr-arrow-right"></span></button>
+        <a href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}" class="btn btn-info" type="button">Cancel<span class="lnr lnr-arrow-right"></span></a>
+  </form>
 {% endblock %}
        <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
