--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_update.html
@@ -38,9 +38,41 @@
 {% block content %}
 <form action="" method="POST">
 {% csrf_token %}
-{{ form|crispy }}
-<button type="submit" class="btn btn-success">Save Room</button>
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.hotel_id|as_crispy_field }}
+      </div>
+    </div>
+    <div class="form-row">
+     <div class="form-group col-md-6 mb-0">
+        {{ form.hotel_id|as_crispy_field }}
+     </div>
+     <div class="form-group col-md-6 mb-0">
+        {{ form.room_number|as_crispy_field }}
+     </div>
+	 <div class="form-group col-md-6 mb-0">
+        {{ form.room_type|as_crispy_field }}
+     </div>
+	</div>
+	<div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.type|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.beds|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.max_occupancy|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
+        {{ form.cost_per_night|as_crispy_field }}
+      </div>
+	</div>
+        <button type="submit" class="btn btn-success">Save Room<span class="lnr lnr-arrow-right"></span></button>
+        <a href="{% url 'HotelsAppCRUD:room_index' %}" class="btn btn-info" type="button">Cancel<span class="lnr lnr-arrow-right"></span></a>
+  </form>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
