--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_update.html
@@ -34,14 +34,23 @@
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
-
 {% load crispy_forms_tags %}
 {% block content %}
 <form action="" method="POST">
 {% csrf_token %}
-{{ form|crispy }}
-<button type="submit" class="btn btn-success">Save Room Service</button>
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.service_description|as_crispy_field }}
+      </div>
+    <div class="form-group col-md-6 mb-0">
+        {{ form.service_price|as_crispy_field }}
+     </div>
+    </div>
+        <button type="submit" class="btn btn-success">Save Room Service<span class="lnr lnr-arrow-right"></span></button>
+        <a href="{% url 'HotelsAppCRUD:rooms_service_index' %}" class="btn btn-info" type="button">Cancel<span class="lnr lnr-arrow-right"></span></a>
+  </form>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
