--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Customers/customer_list.html
@@ -51,7 +51,7 @@
            <th scope="row">{{ customer.name}}</th>
                <td> <a href="{% url 'HotelsAppCRUD:customer_detail' pk=customer.customer_id %}" class="btn btn-info" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:customer_update' pk=customer.customer_id %}" class="btn btn-info" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:customer_delete' pk=customer.customer_id %}" class="btn btn-info" role="button">Delete</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:customer_delete' pk=customer.customer_id %}" class="btn btn-info" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
         </tr>
        {% endfor %}
       </tbody>
