--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_list.html
@@ -49,7 +49,7 @@
            <th scope="row">{{ hotel.name}}</th>
                <td> <a href="{% url 'HotelsAppCRUD:hotel_detail' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:hotel_update' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:hotel_delete' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Delete</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:hotel_delete' pk=hotel.hotel_id %}" class="btn btn-info" role="button">Delete<span class="glyphicon glyphicon-trash"></span></a> </td>
         </tr>
        {% endfor %}
       </tbody>
