--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_update.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Hotels/hotel_update.html
@@ -36,10 +36,9 @@
         <!--================Breadcrumb Area =================-->
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="container-fluid">
 <form action="" method="POST">
 {% csrf_token %}
-  <form method="post">
-    {% csrf_token %}
     <div class="form-row">
       <div class="form-group col-md-6 mb-0">
         {{ form.name|as_crispy_field }}
@@ -77,6 +76,7 @@
         <button type="submit" class="btn btn-success">Save Hotel<span class="lnr lnr-arrow-right"></span></button>
         <a href="{% url 'HotelsAppCRUD:hotel_index' %}" class="btn btn-info" type="button">Cancel<span class="lnr lnr-arrow-right"></span></a>
   </form>
+</div>
 {% endblock %}
         <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
