--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Rooms/room_list.html
@@ -50,7 +50,7 @@
            <th scope="row">{{ room.room_id }}</th>
                <td> <a href="{% url 'HotelsAppCRUD:room_detail' pk=room.room_id %}" class="btn btn-info" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:room_update' pk=room.room_id %}" class="btn btn-info" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:room_delete' pk=room.room_id %}" class="btn btn-info" role="button">Delete</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:room_delete' pk=room.room_id %}" class="btn btn-info" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
         </tr>
        {% endfor %}
       </tbody>
