--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Service/room_service_list.html
@@ -51,7 +51,7 @@
            <th scope="row">{{ hotel.name}}</th>
                <td> <a href="{% url 'HotelsAppCRUD:rooms_service_detail' pk=service.service_id %}" class="btn btn-info" role="button">Detail</a> </td>
                <td> <a href="{% url 'HotelsAppCRUD:rooms_service_update' pk=service.service_id %}" class="btn btn-info" role="button">Update</a> </td>
-               <td> <a href="{% url 'HotelsAppCRUD:rooms_service_delete' pk=service.service_id %}" class="btn btn-info" role="button">Delete</a> </td>
+               <td> <a href="{% url 'HotelsAppCRUD:rooms_service_delete' pk=service.service_id %}" class="btn btn-info" role="button">Delete<span class="glyphicon glyphicon-trash"></span> </a> </td>
         </tr>
        {% endfor %}
       </tbody>
